--- a/themes/ocean/source/css/_partial/article.styl
+++ b/themes/ocean/source/css/_partial/article.styl
@@ -226,3 +226,8 @@ $article-share-link
 @import "apple"
 @import "blockquote"
 @import "english"
+
+table
+  th
+    border-bottom 2px solid
+    min-width 100px
